# ZPE-Music

./: .gitignore  .zenodo.json  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  REPRODUCIBILITY.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  evidence_dispute.md  feature_request.md  question.md
.github/workflows/: ci.yml  publish.yml
artifacts/: l3_music_geogram4.json
docs/: ARCHITECTURE.md  FAQ.md  L3_FINAL_REPORT.md  LEGAL_BOUNDARIES.md  README.md  SCOPE.md  SUPPORT.md
docs/_reorientation/2026-04-17/: NOVELTY_CARD.md
fixtures/: simple_scale.musicxml
geogram5/: run_geogram5_eval.py
geogram5/report/: L3_FINAL_REPORT.md
geogram6/l3-expression-followup/: run_geogram6_eval.py
geogram6/l3-expression-followup/report/: L3_FINAL_REPORT.md
proofs/artifacts/: music_release_metrics.json
proofs/manifests/: CURRENT_AUTHORITY_PACKET.md
restart/: ZPE-Music_STARTUP_PROMPT_2026-04-24.md
scripts/: l3_music_geogram4_eval.py
src/zpe_music/: __init__.py
src/zpe_music/core/: __init__.py  constants.py  imc.py
src/zpe_music/diagram/: __init__.py  quantize.py
src/zpe_music/music/: __init__.py  flags.py  grid.py  pack.py  parser.py  strokes.py  types.py
src/zpe_music_codec/: __init__.py
tests/: common.py  test_music_authority_guardrails.py  test_music_authority_roundtrip.py  test_music_expression_authority_roundtrip.py
validation/: run_release_verification.py
validation/results/: release_verification.json
