[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zpe-music"
version = "0.1.0"
description = "Canonical symbolic-score codec with a bounded note-local expression refinement"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Zer0pa (Pty) Ltd"}]
dependencies = ["music21>=9.1"]

[project.optional-dependencies]
dev = ["numpy>=1.26", "pytest>=8.0"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["zpe_music*"]
