[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zpe-music"
version = "0.1.0"
description = "Canonical symbolic-score codec with a bounded note-local expression refinement"
readme = "README.md"
requires-python = ">=3.10"
license = "LicenseRef-Zer0pa-SAL-7.0"
authors = [{name = "Zer0pa (Pty) Ltd", email = "architects@zer0pa.ai"}]
keywords = [
    "musicxml",
    "symbolic-music",
    "score-codec",
    "note-local-expression",
    "zero-point-encoding",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
]
dependencies = ["music21>=9.1"]

[project.urls]
Homepage = "https://github.com/Zer0pa/ZPE-Music"
Documentation = "https://github.com/Zer0pa/ZPE-Music/blob/main/docs/README.md"
Repository = "https://github.com/Zer0pa/ZPE-Music"
Issues = "https://github.com/Zer0pa/ZPE-Music/issues"
Changelog = "https://github.com/Zer0pa/ZPE-Music/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = ["numpy>=1.26", "pytest>=8.0"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["zpe_music*"]
